# persistra

./: .gitignore  IMPROVEMENT-PLAN.md  README.md  pyproject.toml
src/persistra/: __main__.py
src/persistra/core/: DatasetAnalysis.py  TimeSeriesAnalysis.py  __init__.py  autosave.py  composite.py  engine.py  io.py  logging.py  objects.py  project.py  recent.py  types.py  validation.py
src/persistra/core/data/: test_dataset.csv
src/persistra/operation/: __init__.py  io.py
src/persistra/operations/: __init__.py  io.py  tda.py  viz.py
src/persistra/operations/io/: __init__.py
src/persistra/operations/ml/: __init__.py
src/persistra/operations/preprocessing/: __init__.py
src/persistra/operations/tda/: __init__.py
src/persistra/operations/utility/: __init__.py
src/persistra/operations/viz/: __init__.py
src/persistra/plugins/: loader.py
src/persistra/ui/: MainWindow.py  MplCanvas.py  Viewport.py  Workspace.py  __init__.py  main_window.py
src/persistra/ui/dialogs/: export_figure.py
src/persistra/ui/graph/: items.py  manager.py  scene.py  worker.py
src/persistra/ui/menus/: __init__.py  menu_bar.py  toolbar.py
src/persistra/ui/theme/: __init__.py  dark_modern.py  light_modern.py  stylesheets.py  tokens.py
src/persistra/ui/widgets/: __init__.py  canvas.py  context_panel.py  dashboard.py  log_view.py  node_browser.py  recent_projects.py  viewport.py  viz_panel.py
tests/: conftest.py  test_core.py  test_operations.py
tests/ui/: test_viz_panel_selection.py
tests/unit/: test_phase0.py  test_phase1.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py  test_phase6.py
